// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DbStore Create Test: after list get 1`] = `
Object {
  "currentPage": Object {},
  "dirtyCollections": Object {
    "simpleTestCol": false,
  },
  "doingQuery": Object {
    "undefinedsimpleTestCol{\\"$limit\\":10,\\"$skip\\":0,\\"$sort\\":{\\"createdAt\\":-1}}": true,
  },
  "lists": Object {
    "formModel": Object {
      "data": Array [],
      "limit": 10,
      "skip": 0,
      "total": 0,
    },
  },
  "makeQuery": [Function],
  "maxPage": Object {
    "formModel": 0,
  },
  "pageSize": 10,
  "previousQuery": Object {
    "formModel": Object {
      "$limit": 10,
      "$skip": 0,
      "$sort": Object {
        "createdAt": -1,
      },
    },
  },
}
`;

exports[`DbStore Create Test: after login 1`] = `
<div>
  <table
    className="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          guestName
        </th>
        <th>
          myVal
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
  <nav
    className="pagination is-centered"
  >
    <a
      className="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      className="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      className="pagination-list"
    >
      <li>
        <a
          className="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          className="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          className="pagination-link"
        >
          0
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: after second page get 1`] = `
Object {
  "currentPage": Object {
    "formModel": 0,
  },
  "dirtyCollections": Object {
    "simpleTestCol": false,
  },
  "doingQuery": Object {
    "undefinedsimpleTestCol{\\"$limit\\":10,\\"$skip\\":0,\\"$sort\\":{\\"createdAt\\":-1}}": true,
  },
  "lists": Object {
    "formModel": Object {
      "data": Array [],
      "limit": 10,
      "skip": 0,
      "total": 0,
    },
  },
  "makeQuery": [Function],
  "maxPage": Object {
    "formModel": 0,
  },
  "pageSize": 10,
  "previousQuery": Object {
    "formModel": Object {
      "$limit": 10,
      "$skip": 0,
      "$sort": Object {
        "createdAt": -1,
      },
    },
  },
}
`;

exports[`DbStore Create Test: after third page get 1`] = `
Object {
  "currentPage": Object {
    "formModel": 0,
  },
  "dirtyCollections": Object {
    "simpleTestCol": false,
  },
  "doingQuery": Object {
    "undefinedsimpleTestCol{\\"$limit\\":10,\\"$skip\\":0,\\"$sort\\":{\\"createdAt\\":-1}}": true,
  },
  "lists": Object {
    "formModel": Object {
      "data": Array [],
      "limit": 10,
      "skip": 0,
      "total": 0,
    },
  },
  "makeQuery": [Function],
  "maxPage": Object {
    "formModel": 0,
  },
  "pageSize": 10,
  "previousQuery": Object {
    "formModel": Object {
      "$limit": 10,
      "$skip": 0,
      "$sort": Object {
        "createdAt": -1,
      },
    },
  },
}
`;

exports[`DbStore Create Test: before login 1`] = `
<div>
  <table
    className="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          guestName
        </th>
        <th>
          myVal
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
  <nav
    className="pagination is-centered"
  >
    <a
      className="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      className="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      className="pagination-list"
    >
      <li>
        <a
          className="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          className="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          className="pagination-link"
        >
          1
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: empty result 1`] = `
<div>
  <table
    className="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          guestName
        </th>
        <th>
          myVal
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
  <nav
    className="pagination is-centered"
  >
    <a
      className="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      className="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      className="pagination-list"
    >
      <li>
        <a
          className="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          className="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          className="pagination-link"
        >
          10
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: empty result with defaultVals but not fetched yet 1`] = `
<div>
  <table
    className="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          guestName
        </th>
        <th>
          myVal
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
  <nav
    className="pagination is-centered"
  >
    <a
      className="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      className="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      className="pagination-list"
    >
      <li>
        <a
          className="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          className="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          className="pagination-link"
        >
          10
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: empty result with defaultVals with guaranteed fetch 1`] = `
<div>
  <table
    className="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          guestName
        </th>
        <th>
          myVal
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
  <nav
    className="pagination is-centered"
  >
    <a
      className="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      className="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      className="pagination-list"
    >
      <li>
        <a
          className="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          className="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          className="pagination-link"
        >
          10
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: list after fetch 1`] = `
<div>
  <table
    className="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          guestName
        </th>
        <th>
          myVal
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Loading
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    className="pagination is-centered"
  >
    <a
      className="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      className="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      className="pagination-list"
    >
      <li>
        <a
          className="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          className="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          className="pagination-link"
        >
          0
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: list before fetch 1`] = `
<div>
  <table
    className="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          guestName
        </th>
        <th>
          myVal
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
  <nav
    className="pagination is-centered"
  >
    <a
      className="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      className="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      className="pagination-list"
    >
      <li>
        <a
          className="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          className="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          className="pagination-link"
        >
          0
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: list on fourth page 1`] = `
<div>
  <table
    className="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          guestName
        </th>
        <th>
          myVal
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Loading
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    className="pagination is-centered"
  >
    <a
      className="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      className="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      className="pagination-list"
    >
      <li>
        <a
          className="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          className="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          className="pagination-link"
        >
          0
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: prefix after list get 1`] = `
Object {
  "currentPage": Object {
    "formModel": 0,
  },
  "dirtyCollections": Object {
    "simpleTestCol": false,
  },
  "doingQuery": Object {
    "undefinedsimpleTestCol{\\"$limit\\":10,\\"$skip\\":0,\\"$sort\\":{\\"createdAt\\":-1}}": true,
  },
  "lists": Object {
    "formModel": Object {
      "data": Array [],
      "limit": 10,
      "skip": 0,
      "total": 0,
    },
  },
  "makeQuery": [Function],
  "maxPage": Object {
    "formModel": 0,
  },
  "pageSize": 10,
  "previousQuery": Object {
    "createpref.formModel": Object {
      "$limit": 10,
      "$skip": 0,
      "$sort": Object {
        "createdAt": -1,
      },
    },
    "formModel": Object {
      "$limit": 10,
      "$skip": 0,
      "$sort": Object {
        "createdAt": -1,
      },
    },
  },
}
`;

exports[`DbStore Create Test: prefix list after fetch 1`] = `
<div>
  <table
    className="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          guestName
        </th>
        <th>
          myVal
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
  <nav
    className="pagination is-centered"
  >
    <a
      className="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      className="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      className="pagination-list"
    >
      <li>
        <a
          className="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          className="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          className="pagination-link"
        >
          1
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: prefix list before fetch 1`] = `
<div>
  <table
    className="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          guestName
        </th>
        <th>
          myVal
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
  <nav
    className="pagination is-centered"
  >
    <a
      className="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      className="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      className="pagination-list"
    >
      <li>
        <a
          className="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          className="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          className="pagination-link"
        >
          1
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: prefix second page 1`] = `
<div>
  <table
    className="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          guestName
        </th>
        <th>
          myVal
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
  <nav
    className="pagination is-centered"
  >
    <a
      className="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      className="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      className="pagination-list"
    >
      <li>
        <a
          className="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          className="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          className="pagination-link"
        >
          1
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: prefix still first if prefix unknown but query number 1`] = `
<div>
  <table
    className="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          guestName
        </th>
        <th>
          myVal
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
  <nav
    className="pagination is-centered"
  >
    <a
      className="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      className="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      className="pagination-list"
    >
      <li>
        <a
          className="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          className="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          className="pagination-link"
        >
          10
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: prefix still first if prefix unknown but query set 1`] = `
<div>
  <table
    className="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          guestName
        </th>
        <th>
          myVal
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
  <nav
    className="pagination is-centered"
  >
    <a
      className="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      className="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      className="pagination-list"
    >
      <li>
        <a
          className="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          className="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          className="pagination-link"
        >
          10
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: prefix third page 1`] = `
<div>
  <table
    className="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          guestName
        </th>
        <th>
          myVal
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
  <nav
    className="pagination is-centered"
  >
    <a
      className="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      className="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      className="pagination-list"
    >
      <li>
        <a
          className="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          className="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          className="pagination-link"
        >
          10
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: using prevPage back to third page 1`] = `
<div>
  <table
    className="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          guestName
        </th>
        <th>
          myVal
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Loading
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    className="pagination is-centered"
  >
    <a
      className="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      className="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      className="pagination-list"
    >
      <li>
        <a
          className="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          className="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          className="pagination-link"
        >
          0
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
